<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_expenses"
        android:enabled="true"
        android:icon="@drawable/ic_expenses"
        android:title="@string/nav_expenses" />

    <!-- ✅ THÊM Budget -->
    <item
        android:id="@+id/nav_budget"
        android:enabled="true"
        android:icon="@drawable/ic_budget"
        android:title="@string/nav_budget" />

    <!-- ✅ THÊM Report -->
    <item
        android:id="@+id/nav_report"
        android:enabled="true"
        android:icon="@drawable/ic_report"
        android:title="@string/nav_report" />

    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>